--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     container_name: black411_app
     env_file:
       - .env
-    working_dir: /app
+    working_dir: /app/src
     volumes:
       - .:/app
-    command: python src/app.py
+    command: python app.py
     ports:
       - "5000:5000"
